store/store-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-client-deployment
  namespace: store
  labels:
    app: store-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-client
  template:
    metadata:
      labels:
        app: store-client
    spec:
      containers:
      - name: store-client
        image: yakovda/store-client:1.0.2
        ports:
        - containerPort: 80
        volumeMounts:        
        - name: nginx-client-conf
          mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-client-conf
          configMap: 
            name: nginx-client-conf
