store/store-client-ex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-client-service-external
  namespace: default
spec:
  type: ExternalName
  externalName: store-client-service.store.svc.cluster.local
  ports:
    - port: 80
