store/store-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-client-service
spec:
  selector:
    app: store-client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
