store/store-server-ex-sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-server-service-external
  namespace: default
spec:
  type: ExternalName
  externalName: store-server-service.store.svc.cluster.local
  ports:
    - port: 5000
