store/store-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-server-service
spec:
  selector:
    app: store-server
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
