store/store-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:  
            name: store-server-service
            port:  
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: store-client-service
            port:
              number: 80
